# alpha-wiki-creator

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  plugin.json  pyproject.toml
.alpha-wiki/: bootstrap-report.md  config.yaml
.claude-plugin/: marketplace.json  plugin.json
.obsidian/: COLOR-LEGEND.md  graph.json
.wiki/: index.md  log.md
assets/: claude-md.j2  env.example  gitignore.j2  index-md.j2  log-md.j2  pyproject.j2  readme.j2  settings-local.j2
commands/: audit-project.md  doctor.md  evolve.md  ingest.md  init.md  lint.md  query.md  render.md  review.md  rollup.md  spawn-agent.md  status.md  wiki-evolve.md  wiki-ingest.md  wiki-init.md  wiki-spawn-agent.md  wiki-status.md
docs/: 00-architecture.md  01-alpha-wiki.md  02-agentops.md  03-superpowers-adapter.md  04-state-backend-contract.md  ADR-001-alpha-wiki-agentops-boundary.md  ADR-002-superpowers-adapter-not-fork.md  ADR-003-no-embeddings-mvp.md  ADR-004-state-backend-abstraction.md  ADR-005-marketplace-topology-deferred.md  ADR-006-spawn-agent-boundary.md  README.md  _references.md  alpha-wiki-lifecycle-automation-audit-2026-05-01.md  audit-verified-inventory.md  best-practices-gap-analysis-2026-04-30.md  codex-adapter.md  docs-publishing.md  final-release-hardening-plan.md  final-release-readiness-audit-2026-05-04.md  generated-artifacts-policy.md  implementation-plan-2026-04-30.md  karpathy-llm-wiki-compliance-audit-2026-05-01.md  platform-compatibility-matrix.md  project-audit.md  quickstart.md  release-smoke-2026-05-05.md  roadmap-execution.md
references/: classifier.md  (+4 more)
(+245 files in other folders)
